[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Sprites/OnçaChora.png" type="Texture" id=1]
[ext_resource path="res://scripts/Score.gd" type="Script" id=3]
[ext_resource path="res://scripts/Defeat.gd" type="Script" id=4]
[ext_resource path="res://assets/Musicas/8 Bit Lose Sound Effect.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/fonts/joystix_monospace_font.ttf" type="DynamicFontData" id=6]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float height = 20.0;
uniform float speed = 10.0;
uniform float frequency = 5.0;
void vertex() {
	VERTEX.y += sin((frequency * UV.x) + (speed * TIME));
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/height = 20.0
shader_param/speed = 10.0
shader_param/frequency = 5.0

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 2
outline_color = Color( 0.921569, 0.34902, 0.0666667, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 2
outline_color = Color( 0.921569, 0.34902, 0.0666667, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=9]
size = 25
outline_size = 2
outline_color = Color( 0.921569, 0.34902, 0.0666667, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 566.0
margin_bottom = 937.0
color = Color( 0, 0, 0, 1 )

[node name="OnçaChora" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 268, 416 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="GameOver" type="Label" parent="."]
margin_left = 28.0
margin_top = 45.0
margin_right = 544.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = 69.0
margin_top = 190.0
margin_right = 517.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 2 )
text = "Os filhotes foram 
pegos"
align = 1
valign = 1

[node name="Score" type="Label" parent="."]
margin_left = 109.0
margin_top = 566.0
margin_right = 466.0
margin_bottom = 714.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 147.0
margin_top = 703.0
margin_right = 433.0
margin_bottom = 779.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Play Again"

[node name="Button2" type="Button" parent="."]
margin_left = 147.0
margin_top = 785.0
margin_right = 444.0
margin_bottom = 864.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Quit"

[node name="DefeatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
